--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
